# cmake-learning

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
Testing/Temporary/: CTestCostData.txt
app/: CMakeLists.txt  app.cpp
builder/: build.js
include/Speak/: NumToText.h
modules/maths/: CMakeLists.txt
modules/maths/source/jack/maths/: Functions.cpp  Functions.h
modules/speak/: CMakeLists.txt
modules/speak/source/jack/speak/: NumToText.cpp  NumToText.h  Speak.h
source/: CMakeLists.txt  NumToText.cpp
tests/: CMakeLists.txt  Makefile  MathsTests.cpp  SpeakTests.cpp
